# agentic-srs-assistant

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  env.example  main.py  pyproject.toml
config/: __init__.py
docs/: DATABASE_SCHEMA.md  DOCKER_SETUP.md  SRS_TEMPLATE.md
migrations/: 001_initial_schema.sql
scripts/: __init__.py  run_migrations.py  test_docker_setup.py
src/: __init__.py
src/agents/: __init__.py
src/models/: __init__.py  ieee_srs_model.py
src/services/: __init__.py
src/ui/: __init__.py
tests/: __init__.py  test_database_crud.py  test_ieee_srs_model.py
